[tool.poetry]
name = "pydensnv"
version = "0.1.0"
description = "The central objective of the densnv package is to perform exploratory analysis of the SINAVE databases of ETVs and IVAs through graphs, tables and maps with the aim of directly influencing rational and timely decision-making in ETV programs"
authors = ["Felipe Antonio Dzul Manzanilla"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
